test/files/neg/t7238.check
t7238.scala:6: error: type mismatch;
 found   : Seq[Any]    (in scala.collection.immutable)
 required: Seq[String] (in scala.collection)
  c.c()(Seq[Any](): _*)
                ^
one error found
